# skybrush-ext-rc-gamepad

./: .gitignore  README.md  pyproject.toml  skybrushd.jsonc  tbump.toml
src/skybrush_ext_rc_gamepad/: __init__.py  connection.py  devices.py  extension.py  hid_test.py  scanner.py  supported_devices.json  utils.py  version.py
