[tool.poetry]

# Change this to the name of your own extension
name = "skybrush-ext-rc-gamepad"
version = "0.9.0"
description = "Enabling the usage of gamepads as remote controllers in Skybrush Server"
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
license = "MIT"
packages = [
  # Change this to the name of the folder in src/ containing your extension
  { include = "skybrush_ext_rc_gamepad", from = "src" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9"
hidapi = ">=0.14.0"

[tool.poetry.group.dev.dependencies]
flockwave-server = { version = "^2.17.5", source = "collmot" }

[tool.poetry.plugins]

[tool.poetry.plugins."skybrush.server.ext"]
rc_gamepad = "skybrush_ext_rc_gamepad"

[tool.poetry.scripts]
skybrushd = "flockwave.server.launcher:start"
hid_test = "skybrush_ext_rc_gamepad.hid_test:main"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
